# HalfPastFive

./: .gitignore  Dockerfile  README.md  half_past_five.py  pyproject.toml  requirements.txt
half_past_five/: half_past_five.py
static/css/: main.css
static/js/: main.js
static/wavesurfer.js/: wavesurfer.min.js
static/wavesurfer.js/plugin/: wavesurfer.regions.min.js  wavesurfer.timeline.min.js
templates/: index.html
